--- a/rahGRaphics_Test/rahGRaphics_Test.vcxproj
+++ b/rahGRaphics_Test/rahGRaphics_Test.vcxproj
@@ -117,6 +117,10 @@
       <ShaderType>
       </ShaderType>
     </FxCompile>
+    <PostBuildEvent>
+      <Command>start xcopy /E /Y /R "$(solutionDir)PostCompile\$(Platform)\*.dll" "$(solutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)"
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -130,7 +134,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>rahMath_$(Configuration).lib;rahTools_$(Configuration).lib;rahAudio_$(Configuration).lib;rahGraphics_$(Configuration).lib;rahEngine_$(Configuration).lib;fmod_vc.lib;d3d11.lib;DirectXTexd.lib;assimpd.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>rahMath_$(Configuration).lib;rahTools_$(Configuration).lib;rahAudio_$(Configuration).lib;rahGraphics_$(Configuration).lib;rahEngine_$(Configuration).lib;fmod64_vc.lib;d3d11.lib;DirectXTexd.lib;assimpd.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(DEVLIBS)Visual Leak Detector\lib\Win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
@@ -138,6 +142,10 @@
       <ShaderType>
       </ShaderType>
     </FxCompile>
+    <PostBuildEvent>
+      <Command>start xcopy /E /Y /R "$(solutionDir)PostCompile\$(Platform)\*.dll" "$(solutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)"
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -158,6 +166,10 @@
       <AdditionalDependencies>rahMath_$(Configuration).lib;rahTools_$(Configuration).lib;rahAudio_$(Configuration).lib;rahGraphics_$(Configuration).lib;rahEngine_$(Configuration).lib;fmod_vc.lib;d3d11.lib;DirectXTexd.lib;assimpd.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(DEVLIBS)Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>start xcopy /E /Y /R "$(solutionDir)PostCompile\$(Platform)\*.dll" "$(solutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)"
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -178,6 +190,10 @@
       <AdditionalDependencies>rahMath_$(Configuration).lib;rahTools_$(Configuration).lib;rahAudio_$(Configuration).lib;rahGraphics_$(Configuration).lib;rahEngine_$(Configuration).lib;fmod_vc.lib;d3d11.lib;DirectXTexd.lib;assimpd.lib;imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(DEVLIBS)Visual Leak Detector\lib\Win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>start xcopy /E /Y /R "$(solutionDir)PostCompile\$(Platform)\*.dll" "$(solutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)"
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
